--- a/kibana-eck.yml
+++ b/kibana-eck.yml
@@ -4,7 +4,7 @@ metadata:
   name: kyberlife
   namespace: default
 spec:
-  version: 8.7.1
+  version: 8.8.0
   count: 2
   elasticsearchRef:
     name: kyberlife
@@ -13,8 +13,10 @@ spec:
       selfSignedCertificate:
         disabled: true
   config:
-    xpack.fleet.agents.elasticsearch.hosts: ["https://kyberlife-es-internal-http:9200"]
-    xpack.fleet.agents.fleet_server.hosts: ["https://fleet-server-agent-http:8220"]
+    xpack.fleet.agents.elasticsearch.hosts:
+      ["https://kyberlife-es-internal-http:9200"]
+    xpack.fleet.agents.fleet_server.hosts:
+      ["https://fleet-server-agent-http:8220"]
     xpack.fleet.packages:
       - name: system
         version: latest
@@ -32,10 +34,10 @@ spec:
           - metrics
         unenroll_timeout: 900
         package_policies:
-        - name: fleet_server-1
-          id: fleet_server-1
-          package:
-            name: fleet_server
+          - name: fleet_server-1
+            id: fleet_server-1
+            package:
+              name: fleet_server
       - name: Elastic Agent on ECK policy
         id: eck-agent
         namespace: default
