--- a/postgresql-initdb.yml
+++ b/postgresql-initdb.yml
@@ -10,7 +10,7 @@ data:
     --
 
     -- Dumped from database version 14.5 (Debian 14.5-1.pgdg110+1)
-    -- Dumped by pg_dump version 14.5 (Debian 14.5-1.pgdg110+1)
+    -- Dumped by pg_dump version 15.3 (Ubuntu 15.3-0ubuntu0.23.04.1)
 
     SET statement_timeout = 0;
     SET lock_timeout = 0;
@@ -22,6 +22,15 @@ data:
     SET xmloption = content;
     SET client_min_messages = warning;
     SET row_security = off;
+
+    --
+    -- Name: public; Type: SCHEMA; Schema: -; Owner: postgres
+    --
+
+    -- *not* creating schema, since initdb creates it
+
+
+    ALTER SCHEMA public OWNER TO postgres;
 
     SET default_tablespace = '';
 
@@ -327,6 +336,7 @@ data:
     COPY public."__EFMigrationsHistory" ("MigrationId", "ProductVersion") FROM stdin;
     20230306103423_Initial	7.0.3
     20230306103432_Initial	7.0.3
+    20230608071429_UseNotMappedDataAnnotation	7.0.5
     \.
 
 
@@ -554,8 +564,9 @@ data:
     -- Name: SCHEMA public; Type: ACL; Schema: -; Owner: postgres
     --
 
+    REVOKE USAGE ON SCHEMA public FROM PUBLIC;
+    GRANT ALL ON SCHEMA public TO PUBLIC;
     GRANT ALL ON SCHEMA public TO guest;
-
 
     --
     -- PostgreSQL database dump complete
