--- a/rabbitmq-prod.yml
+++ b/rabbitmq-prod.yml
@@ -18,6 +18,12 @@ spec:
     externalSecret: 
       name: "rabbitmq-secret"
   rabbitmq:
+    additionalPlugins:
+      - rabbitmq_federation
+      - rabbitmq_federation_management
+      - rabbitmq_management
+      - rabbitmq_management_agent
+      - rabbitmq_peer_discovery_k8s
     additionalConfig: |
       cluster_partition_handling = pause_minority
       vm_memory_high_watermark_paging_ratio = 0.99
