--- a/fluentd-config.yml
+++ b/fluentd-config.yml
@@ -137,6 +137,8 @@ data:
         port 9200
         scheme https
         ssl_verify false
+        ssl_version TLSv1_2
+        ca_file "/fluentd/elastic/tls.crt"
         user elastic
         password P@$$w0rd
         flush_interval 1s
