--- a/elasticsearch-eck-fleet.yml
+++ b/elasticsearch-eck-fleet.yml
@@ -11,6 +11,7 @@ spec:
     - name: kyberlife
   mode: fleet
   fleetServerEnabled: true
+  policyID: eck-fleet-server
   deployment:
     replicas: 3
     podTemplate:
@@ -32,6 +33,7 @@ spec:
   fleetServerRef:
     name: fleet-server
   mode: fleet
+  policyID: eck-agent
   daemonSet:
     podTemplate:
       spec:
