Add xpack config and es credentials

--- a/kibana-eck.yml
+++ b/kibana-eck.yml
@@ -17,6 +17,9 @@ spec:
       ["https://kyberlife-es-internal-http:9200"]
     xpack.fleet.agents.fleet_server.hosts:
       ["https://fleet-server-agent-http:8220"]
+    xpack.encryptedSavedObjects.encryptionKey: "something_at_least_32_characters"
+    elasticsearch.username: "kyberlife"
+    elasticsearch.password: "P@$$w0rd"
     xpack.fleet.packages:
       - name: system
         version: latest
