Add account id to aws-secret

--- a/aws-secret.yml
+++ b/aws-secret.yml
@@ -4,5 +4,6 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  access-key: QUtJQTJGWVBPRExKQVQ2RUJRNEw=
-  secret-key: Wmo2c3piM1BEckVEcW1VMEhVaGF6bk0rb1JlZ2RkMzl3bFVoTjhJNg==
+  account: <base64 string>
+  access-key: <base64 string>
+  secret-key: <base64 string>
