--- a/aws-ecr-cron.yml
+++ b/aws-ecr-cron.yml
@@ -27,7 +27,6 @@ spec:
                 - /bin/sh
                 - -c
                 - |-
-                  ACCOUNT=400679711653
                   REGION=ap-southeast-1
                   SECRET_NAME=aws-ecr-registry
                   EMAIL=khteh@email.com
@@ -38,7 +37,7 @@ spec:
                   echo "ENV variables setup done."
                   kubectl delete secret --ignore-not-found $SECRET_NAME
                   kubectl create secret docker-registry $SECRET_NAME \
-                  --docker-server=https://${ACCOUNT}.dkr.ecr.${REGION}.amazonaws.com \
+                  --docker-server=https://${AWS_ACCOUNT}.dkr.ecr.${REGION}.amazonaws.com \
                   --docker-username=AWS \
                   --docker-password="${TOKEN}" \
                   --docker-email="${EMAIL}"
@@ -54,6 +53,11 @@ spec:
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
               env:
+                - name: AWS_ACCOUNT
+                  valueFrom:
+                    secretKeyRef:
+                      name: aws-secret
+                      key: account
                 - name: AWS_ACCESS_KEY
                   valueFrom:
                     secretKeyRef:
