--- a/elasticsearch-secret.yml
+++ b/elasticsearch-secret.yml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: Secret
-type: Opaque
+type: kubernetes.io/basic-auth
 metadata:
   name: elasticsearch-secret
   namespace: default
-data:
-  username: a3liZXJsaWZl
-  password: UEAkJHcwcmQ=
+stringData:
+  username: kyberlife
+  password: P@$$w0rd
+  roles: kibana_admin,superuser,snapshot_user
