--- a/elasticsearch-secret.yml
+++ b/elasticsearch-secret.yml
@@ -5,6 +5,6 @@ metadata:
   name: elasticsearch-secret
   namespace: default
 stringData:
-  username: kyberlife
-  password: P@$$w0rd
+  username: <username>
+  password: <password>
   roles: kibana_admin,superuser,snapshot_user
